<!--suppress ALL -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/nav_width"
    android:layout_height="wrap_content"
    android:layout_marginBottom="?attr/actionBarSize"
    android:background="@drawable/nav_background"
    android:elevation="@dimen/nav_elevation"
    tools:context="com.delivery.arish.arishdelivery.ui.Main.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:orientation="vertical"
        android:background="@drawable/blue_gradient" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/nav_image"
            android:layout_width="@dimen/nav_header_circleimageview_width"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="0dp"
            android:src="@drawable/bas"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white" />


        <TextView
            android:id="@+id/nav_txtname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/nav_header_txt_padding"
            android:layout_marginBottom="@dimen/nav_header_txt_bottom_margin"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/login_primary_dark"
            android:text="@string/name" />


        <TextView
            android:id="@+id/nav_txtemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/nav_header_txt_padding"
            android:layout_marginBottom="@dimen/nav_header_txt_bottom_margin"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/login_primary_darker"
            android:inputType="textMultiLine"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/email" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_below="@+id/lin1"
        android:orientation="vertical"
        android:layout_margin="@dimen/nav_child_view_side_margin"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/nav_profile"
            android:layout_width="@dimen/nav_item_view_size"
            android:layout_height="@dimen/nav_item_view_size"
            android:layout_marginTop="@dimen/nav_item_side_margin"
            android:layout_marginBottom="@dimen/nav_item_side_margin"
            android:src="@drawable/ic_profile"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/nav_item_side_margin"
            android:layout_marginBottom="@dimen/nav_item_side_margin"
            android:layout_alignParentEnd="true"
            android:text="@string/personal_page"/>
        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/nav_profile"
            android:layout_marginTop="@dimen/nav_item_side_margin"
            android:layout_marginBottom="@dimen/nav_item_side_margin"
            android:background="@color/grey"/>

        <ImageView
            android:id="@+id/nav_share"
            android:layout_width="@dimen/nav_item_view_size"
            android:layout_height="@dimen/nav_item_view_size"
            android:layout_marginTop="@dimen/nav_item_side_margin"
            android:layout_marginBottom="@dimen/nav_item_side_margin"
            android:layout_below="@+id/v1"
            android:src="@drawable/ic_share"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v1"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/nav_item_side_margin"
            android:layout_marginBottom="@dimen/nav_item_side_margin"
            android:layout_alignParentEnd="true"
            android:text="@string/share"/>

        <View
            android:id="@+id/v2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/nav_share"
            android:layout_marginTop="@dimen/nav_item_side_margin"
            android:layout_marginBottom="@dimen/nav_item_side_margin"
            android:background="@color/grey"/>

        <ImageView
            android:id="@+id/nav_signout"
            android:layout_width="@dimen/nav_item_view_size"
            android:layout_height="@dimen/nav_item_view_size"
            android:layout_marginTop="@dimen/nav_item_side_margin"
            android:layout_marginBottom="@dimen/nav_item_side_margin"
            android:layout_below="@+id/v2"
            android:src="@drawable/ic_log_out"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v2"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/nav_item_side_margin"
            android:layout_marginBottom="@dimen/nav_item_side_margin"
            android:layout_alignParentEnd="true"
            android:text="@string/Logout"/>
        <View
            android:id="@+id/v3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/nav_signout"
            android:layout_marginTop="@dimen/nav_item_side_margin"
            android:layout_marginBottom="@dimen/nav_item_side_margin"
            android:background="@color/grey"/>
        <TextView
            android:layout_below="@+id/v3"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"/>


    </RelativeLayout>
    </RelativeLayout>

</ScrollView>